objects/BMCServiceDesk__BMC_ApplicationService__c.object
<CustomObject>
    <description>BMC_ApplicationService. CMDB Class that stores information about services that represent modules of an application, or services that are deployed on a server. Use this class and its subclasses to define the low level application services in your organization. This class has no corresponding DMTF CIM class.</description>
    <fields>
        <fullName>BMCServiceDesk__Application_Service_Type__c</fullName>
        <label>Application Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SAP Service</fullName>
                </value>
                <value>
                    <fullName>J2EE Module</fullName>
                </value>
                <value>
                    <fullName>J2EE Servlet</fullName>
                </value>
                <value>
                    <fullName>Siebel Component</fullName>
                </value>
                <value>
                    <fullName>Siebel Component Group</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Path_Name__c</fullName>
        <label>Path Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Application Service</label>
    <nameField>
        <label>Application Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>